# clothes_manipulation

./: CMakeLists.txt  bin.cpp  inside_drum.cpp  paddles.cpp  washing_machine.cpp
classes/: drumModel.cpp  entropy.cpp  pointpose.cpp  segmentation.cpp
data/inside_drum/: sample1.pcd  sample10.pcd  sample11.pcd  sample12.pcd  sample13.pcd  sample2.pcd  sample3.pcd  sample4.pcd  sample5.pcd  sample6.pcd  sample7.pcd  sample8.pcd  sample9.pcd
data/paddles/: paddle1.pcd  paddle3.pcd  paddle4.pcd  paddle5.pcd  paddle6.pcd  paddle7.pcd  paddle8.pcd
include/: drumModel.h  entropy.h  pointpose.h  segmentation.h
